--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -2,7 +2,7 @@
     height: 100%;
     width: 100%;
     object-fit: fill;
-    position: absolute;
+    position: fixed;
     margin: 0;
     padding: 0;
     top: 0;
