--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -3,6 +3,7 @@
     height: 100%;
     width: 100%;
     z-index: -999;
+    object-fit: cover;
 }
 
 .vid {
@@ -11,8 +12,7 @@
     object-fit: cover;
     margin: 0;
     padding: 0;
-    top: 0;
-    
+    z-index: -999;
 }
 
 .main-container {
