--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -26,7 +26,6 @@
     align-items: center;
     gap: 0px;
     height: 100vh;
-    z-index: -1;
 }
 
 .me {
@@ -35,13 +34,11 @@
     object-fit: contain;
     transition: transform .5s ease;
     transform: rotateY(0deg);
-    z-index: -1;
 }
 
 .me:hover {
     transform: rotateY(360deg);
     cursor: pointer;
-    z-index: -1;
 }
 
 .text-container {
@@ -84,7 +81,6 @@
     animation-duration: 2s;
     animation-timing-function: ease;
     animation-iteration-count: infinite;
-    z-index: -1;
 }
 
 .text1.texted, .text2.texted, .text3.texted, .text4.texted {
@@ -127,9 +123,9 @@
     height: 60px;
     position: absolute;
     transform: translate(-200px, 200px);
-    opacity: 50%;
+    opacity: 0%;
     z-index: -1;
-    transition: transform .5s ease, opacity;
+    transition: transform .5s ease, opacity 1s ease;
 }
 
 .hover:hover .png1 {
@@ -163,14 +159,12 @@
         z-index: 0;
         height: 100%;
         gap: 0px;
-        z-index: -1;
     }
     
     .me {
         height: 450px;
         width: 100%;
         object-fit: contain;
-        z-index: -1;
     }
     
     .text-container {
@@ -194,12 +188,10 @@
     
     .text2 {
         font-size: 80px;
-        z-index: -1;
     }
     
     .text3 {
         font-size: 80px;
-        z-index: -1;
     }
     
     .text4 {
@@ -230,6 +222,12 @@
 @media (max-width: 600px) {
     .vid-container {
         display: none;
+        visibility: hidden;
+    }
+
+    .vid {
+        display: none;
+        visibility: hidden;
     }
 
     .bg-mobile {
