--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -47,7 +47,7 @@
     height: 500px;
     width: 550px;
     font-size: 45px;
-    
+    justify-content: center;
 }
 
 .text1 {
@@ -152,13 +152,13 @@
     .main-container {
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 1fr 1fr;
         justify-content: center;
         align-items: center;
         gap: 0px;
         z-index: 0;
-        height: 100%;
+        height: 100vh;
         gap: 0px;
+        margin: auto;
     }
     
     .me {
@@ -218,17 +218,20 @@
 }
 
 @media (max-width: 600px) {
-    .vid-container {
-        display: none;
-    }
-
     .me {
         height: 300px;
-        width: 100%;
+        width: 80%;
+        margin: auto;
+    }
+
+    .hover {
+        margin: auto;
+        width: 80%;
     }
     
     .text-container {
-        width: 100%;
+        width: 80%;
+        margin: auto;
     }
 
     .text1 {
@@ -253,5 +256,13 @@
     
     .text4 {
         font-size: 60px;
+    }
+
+    .text1.texted, .text2.texted, .text3.texted, .text4.texted {
+        transform: rotateY(0deg);
+    }
+
+    .me:hover {
+        transform: rotateY(0deg);
     }
 }
