--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -1,6 +1,6 @@
 .background {
     background-color: #17202A;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     padding-bottom: 100px;
 }
